app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 222 16% 12%;
    --foreground: 210 40% 96%;

    --card: 222 16% 16%;
    --card-foreground: 210 40% 96%;

    --popover: 222 16% 16%;
    --popover-foreground: 210 40% 96%;

    --primary: 210 40% 96%;
    --primary-foreground: 222 47% 12%;

    --secondary: 220 18% 22%;
    --secondary-foreground: 210 40% 96%;

    --muted: 220 18% 22%;
    --muted-foreground: 215 18% 58%;

    --accent: 220 18% 22%;
    --accent-foreground: 210 40% 96%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --border: 220 16% 24%;
    --input: 220 16% 24%;
    --ring: 213 26% 80%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground transition-colors duration-150;
  }
}

